fix overflow for mobile

--- a/styles.css
+++ b/styles.css
@@ -825,3 +825,8 @@ SHAPES
     padding: 40px;
   }
 }
+
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
